<resources>
    <string name="app_name">Campus Party</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_atividades">Atividades e Desafios</string>
    <string name="menu_quiz">Quiz do Campusero</string>
    <string name="menu_ingressos">Ingressos</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
