<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_atividades"
            android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
            android:title="@string/menu_atividades" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_ingressos"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/menu_ingressos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
